[package]
name = "bench"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Benchmark harness for preemptive-lsm compaction research."

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
mini-lsm = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"
rand = "0.9"
tempfile = "3"
